-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10.0
-
None
-
b3173a4a0 (dev), a425ae599 (dev), 38ac6f4f6 (6.10), e73e67e75 (6.10)
We don't need the .qmlls.ini generation anymore in 6.10. Don't hint the user about it in qmlls, and remove it from the documentation too.
- relates to
-
QTCREATORBUG-33673 Remove option to unconditionally create .qmlls.ini file for new projects
-
- Closed
-