qmlls: don't warn about QT_QML_GENERATE_QMLLS_INI anymore

We don't need the .qmlls.ini generation anymore in 6.10. Don't hint the
user about it in qmlls.

Pick-to: 6.10
Task-number: QTBUG-141225
Change-Id: Ie31e486a9b517cd442feb6dec3ec47f144d5e7ac
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>